--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <!-- ================================== START OF PAST PYMCON EVENT ============================== -->
     <section class="events">
-        <h2>PyMCon 2022 at a Glance</h2>
+        <h2>PyMCon 2020 at a Glance</h2>
         <div class="container events__container">
             <article class="event">
                 <div class="iframe__container">
@@ -200,7 +200,7 @@
 
 
     <!-- ================================== START OF TEAM ============================== -->
-    <section class="team">
+    <section class="team" id="team">
         <h2>Meet Our Team</h2>
         <div class="container team__container">
             <article class="team__member">
