--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Swiper JS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <!-- Background Texture -->
     <style>
@@ -58,7 +58,7 @@
     <header>
         <div class="container header__container">
             <div class="header__left">
-                <h1>PYMCON'22 - Web Series</h1>
+                <h1>PYMCON'22 Web Series</h1>
                 <h5>An Asynchronous-first virtual conference for the Bayesian community</h5>
                 <p>
                     We believe in building a community as much as we believe in building code. Come and join with us!
@@ -559,7 +559,7 @@
 
 
     <!-- =============== JAVASCRIPT ================== -->
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 
     <!-- ================== ANIMATION ==================== -->
     <script src="./js/animation_script.js"></script>
@@ -571,7 +571,7 @@
     <script>
         var swiper = new Swiper(".mySwiper", {
             slidesPerView: 2,
-            spaceBetween: 30,
+            spaceBetween: 10,
             loop: true,
             autoplay: {
                 delay: 1500,
@@ -581,16 +581,17 @@
                 el: ".swiper-pagination",
                 clickable: true,
             },
-            navigation: {
-                nextEl: ".swiper-button-next",
-                prevEl: ".swiper-button-prev",
-            },
 
-            // when windows width is >= 600px
+            // when windows width is >= 800px
             breakpoints: {
-                600: {
+                800: {
+                    slidesPerView: 3,
+                    spaceBetween: 20,
+                },
+                1000: {
                     slidesPerView: 4,
-                }
+                    spaceBetween: 30,
+                },
             }
         });
     </script>
