--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
                 <article class="goal">
                     <span class="goal__icon"><i class="uil uil-users-alt"></i></span>
                     <h5>Create a space</h5>
-                    <p>Create a space and time for community members to meet each other & interact</p>
+                    <p>Create a space and time for community members to meet eachother & interact</p>
                 </article>
 
                 <article class="goal">
                     <span class="goal__icon"><i class="uil uil-microphone"></i></span>
-                    <h5>Record and organize</h5>
+                    <h5>Record & organize</h5>
                     <p>Record and organize the expertise and experience around PyMC</p>
                 </article>
 
@@ -121,7 +121,7 @@
                 <article class="goal">
                     <span class="goal__icon"><i class="uil uil-brackets-curly"></i></span>
                     <h5>Lorem ipsum</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque</p>
                 </article>
             </div>
         </div>
