make speaker slider and add favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PyMCon 2022</title>
+    <title>PyMCon Web Series</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
 
     <!-- Iconscout Icon CDN-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.5/css/unicons.css">
@@ -130,70 +131,81 @@
 
 
 
-    <!-- ================================== START OF PAST PYMCON EVENT ============================== -->
-    <section class="events">
-        <h2>PyMCon 2020 at a Glance</h2>
-        <div class="container events__container">
-            <article class="event">
-                <div class="iframe__container">
-                    <iframe src="https://www.youtube.com/embed/LTLfeNyioR8?rel=0" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-                <div class="event__info">
-                    <h4>PyMCon 2020 Welcome by Ravin Kumar</h4>
-                    <div class="event__description">
-                        <p>
-                            Ravin is a data scientist at Google where he uses data to inform decisions. He has
-                            previously worked at Sweetgreen, designing systems that would benefit team members and
-                            communities through sustainable and healthy food, and SpaceX, creating tools that would
-                            ultimately launch rocket ships.
-                        </p>
-                    </div>
-                    <a href="#" class="btn btn-primary">Learn more</a>
-                </div>
-            </article>
+    <!-- ================================== START OF KEYNOTE SPEAKERS ============================== -->
+    <section class="speakers">
+        <h2>Keynote Speakers</h2>
+        <div class="container speakers__container">
+            <div class="swiper speakerSlider">
+                <div class="swiper-wrapper">
+                    <article class="speaker swiper-slide">
+                        <div class="iframe__container">
+                            <iframe src="https://www.youtube.com/embed/LTLfeNyioR8?rel=0" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                        <div class="speaker__info">
+                            <h4>PyMCon 2020 Welcome by Ravin Kumar</h4>
+                            <div class="speaker__description">
+                                <p>
+                                    Ravin is a data scientist at Google where he uses data to inform decisions. He has
+                                    previously worked at Sweetgreen, designing systems that would benefit team members
+                                    and
+                                    communities through sustainable and healthy food, and SpaceX, creating tools that
+                                    would
+                                    ultimately launch rocket ships.
+                                </p>
+                            </div>
+                            <a href="#" class="btn btn-primary">Learn more</a>
+                        </div>
+                    </article>
 
-            <article class="event">
-                <div class="iframe__container">
-                    <iframe src="https://www.youtube.com/embed/RXODDVK7B-g?rel=0" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-                <div class="event__info">
-                    <h4>PyMC: Past, Present, and Future by Chris</h4>
-                    <div class="event__description">
-                        <p>
-                            To kick off PyMCon 2020, I will provide some of the back-story of the PyMC project: where
-                            we’ve been, where we are, and where we might go. Chris Fonnesback is a Senior Quantitative
-                            Analyst in Baseball Operations for the New York Yankees.
-                        </p>
-                    </div>
-                    <a href="#" class="btn btn-primary">Learn more</a>
-                </div>
-            </article>
+                    <article class="speaker swiper-slide">
+                        <div class="iframe__container">
+                            <iframe src="https://www.youtube.com/embed/RXODDVK7B-g?rel=0" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                        <div class="speaker__info">
+                            <h4>PyMC: Past, Present, and Future by Chris</h4>
+                            <div class="speaker__description">
+                                <p>
+                                    To kick off PyMCon 2020, I will provide some of the back-story of the PyMC project:
+                                    where
+                                    we’ve been, where we are, and where we might go. Chris Fonnesback is a Senior
+                                    Quantitative
+                                    Analyst in Baseball Operations for the New York Yankees.
+                                </p>
+                            </div>
+                            <a href="#" class="btn btn-primary">Learn more</a>
+                        </div>
+                    </article>
 
-            <article class="event">
-                <div class="iframe__container">
-                    <iframe src="https://www.youtube.com/embed/ZxR3mw-Znzc?rel=0" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <article class="speaker swiper-slide">
+                        <div class="iframe__container">
+                            <iframe src="https://www.youtube.com/embed/ZxR3mw-Znzc?rel=0" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                        <div class="speaker__info">
+                            <h4>The Bayesian Workflow: building a covid19 model</h4>
+                            <div class="speaker__description">
+                                <p>
+                                    In this tutorial we will build a COVID-19 model from scratch. Thomas is the founder
+                                    of PyMC
+                                    Labs, a Bayesian consulting firm, PyMC author, PhD on computational cognitive
+                                    neuroscience
+                                    from Brown University.
+                                </p>
+                            </div>
+                            <a href="#" class="btn btn-primary">Learn more</a>
+                        </div>
+                    </article>
                 </div>
-                <div class="event__info">
-                    <h4>The Bayesian Workflow: building a covid19 model</h4>
-                    <div class="event__description">
-                        <p>
-                            In this tutorial we will build a COVID-19 model from scratch. Thomas is the founder of PyMC
-                            Labs, a Bayesian consulting firm, PyMC author, PhD on computational cognitive neuroscience
-                            from Brown University.
-                        </p>
-                    </div>
-                    <a href="#" class="btn btn-primary">Learn more</a>
-                </div>
-            </article>
+                <div class="swiper-pagination speaker-pagination"></div>
+            </div>
         </div>
     </section>
-    <!-- ================================== END OF PAST PYMCON EVENT ============================== -->
+    <!-- ================================== END OF KEYNOTE SPEAKERS ============================== -->
 
 
 
@@ -331,7 +343,7 @@
     <!-- ================================== START OF SPONSORS ============================== -->
     <section class="container sponsors__container">
         <h2>Our Sponsors</h2>
-        <div class="swiper mySwiper">
+        <div class="swiper logoSlider">
             <div class="swiper-wrapper">
                 <div class="sponsor swiper-slide">
                     <div class="sponsor-logo">
@@ -370,7 +382,7 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination logo-pagination"></div>
     </section>
     <!-- ================================== END OF SPONSORS ============================== -->
 
@@ -568,7 +580,35 @@
 
     <!-- =============== SPONSORS SLIDER LOGIC ================ -->
     <script>
-        var swiper = new Swiper(".mySwiper", {
+        var swiper = new Swiper(".speakerSlider", {
+            slidesPerView: 1,
+            spaceBetween: 10,
+            loop: true,
+            autoplay: {
+                delay: 3500,
+                disableOnInteraction: true,
+            },
+            pagination: {
+                el: ".speaker-pagination",
+                clickable: true,
+            },
+
+            // when windows width is >= 600px
+            breakpoints: {
+                // for Tablate
+                600: {
+                    slidesPerView: 2,
+                    spaceBetween: 20,
+                },
+                // for Desktop
+                1024: {
+                    slidesPerView: 3,
+                    spaceBetween: 30,
+                },
+            }
+        });
+
+        var swiper = new Swiper(".logoSlider", {
             slidesPerView: 2,
             spaceBetween: 10,
             loop: true,
@@ -577,19 +617,19 @@
                 disableOnInteraction: true,
             },
             pagination: {
-                el: ".swiper-pagination",
+                el: ".logo-pagination",
                 clickable: true,
             },
 
             // when windows width is >= 800px
             breakpoints: {
                 // for Tablate
-                800: {
+                600: {
                     slidesPerView: 3,
                     spaceBetween: 20,
                 },
                 // for Desktop
-                1000: {
+                1024: {
                     slidesPerView: 4,
                     spaceBetween: 30,
                 },
