fix team and faqs hyperlink

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PyMCon Web Series</title>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
 
     <!-- Iconscout Icon CDN-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.5/css/unicons.css">
@@ -33,16 +33,16 @@
     <!-- ============================= START OF NAVBAR =========================== -->
     <nav>
         <div class="container nav__container">
-            <a href="index.html">
+            <a href="/">
                 <h4>PyMCon</h4>
             </a>
             <ul class="nav__menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">FAQs</a></li>
+                <li><a href="#faqs">FAQs</a></li>
                 <li><a href="#">Schedule</a></li>
                 <li><a href="#">Speakers</a></li>
-                <li><a href="#">Organizers</a></li>
+                <li><a href="#team">Organizers</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Code of Conduct</a></li>
             </ul>
@@ -390,7 +390,7 @@
 
 
     <!-- ================================== START OF FAQs ============================== -->
-    <section class="faqs">
+    <section class="faqs" id="faqs">
         <h2>Frequently Asked Questions</h2>
         <div class="container faqs__container">
             <article class="faq">
