--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PyMCon Web Series</title>
-    <link rel="icon" type="image/png" href="./images/favicon.png">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/images/favicon/site.webmanifest">
 
     <!-- Iconscout Icon CDN-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.5/css/unicons.css">
@@ -19,6 +24,7 @@
     <!-- Swiper JS for Logo Slider-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- Background Texture -->
@@ -216,7 +222,7 @@
         <div class="container team__container">
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/ravin.jpg">
+                    <img src="./images/team_photos/ravin.jpg">
                 </div>
                 <div class="team__member-info">
                     <h4>Ravin Kumar</h4>
@@ -231,7 +237,7 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/twiecki.jpg">
+                    <img src="./images/team_photos/twiecki.jpg">
                 </div>
                 <div class="team__member-info">
                     <h4>Thomas Wiecki</h4>
@@ -246,7 +252,7 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/oriol.jpg">
+                    <img src="./images/team_photos/oriol.jpg">
                 </div>
                 <div class="team__member-info">
                     <h4>Oriol Abril-Pla</h4>
@@ -261,7 +267,7 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/christian.jpg">
+                    <img src="./images/team_photos/christian.jpg">
                 </div>
                 <div class="team__member-info">
                     <h4>Christian</h4>
@@ -276,7 +282,7 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/sid.jpg">
+                    <img src="./images/team_photos/sid.jpg">
                 </div>
                 <div class="team__member-info">
                     <h4>Sid Ravinutala</h4>
@@ -291,7 +297,7 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/hector.jpg">
+                    <img src="./images/team_photos/hector.jpg">
                 </div>
                 <div class="team__member-info">
                     <h4>Hector Muñoz</h4>
@@ -306,7 +312,7 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/quan.jpg">
+                    <img src="./images/team_photos/quan.jpg">
                 </div>
                 <div class="team__member-info">
                     <h4>Quan Nguyen</h4>
@@ -321,7 +327,7 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/chris.jpg">
+                    <img src="./images/team_photos/chris.jpg">
                 </div>
                 <div class="team__member-info">
                     <h4>Chris Krapu</h4>
@@ -347,37 +353,37 @@
             <div class="swiper-wrapper">
                 <div class="sponsor swiper-slide">
                     <div class="sponsor-logo">
-                        <img src="./images/sp1.jpg">
+                        <img src="./images/sponsors_logos/sp1.jpg">
                     </div>
                 </div>
 
                 <div class="sponsor swiper-slide">
                     <div class="sponsor-logo">
-                        <img src="./images/sp2.jpg">
+                        <img src="./images/sponsors_logos/sp2.jpg">
                     </div>
                 </div>
 
                 <div class="sponsor swiper-slide">
                     <div class="sponsor-logo">
-                        <img src="./images/sp3.jpg">
+                        <img src="./images/sponsors_logos/sp3.jpg">
                     </div>
                 </div>
 
                 <div class="sponsor swiper-slide">
                     <div class="sponsor-logo">
-                        <img src="./images/sp4.jpg">
+                        <img src="./images/sponsors_logos/sp4.jpg">
                     </div>
                 </div>
 
                 <div class="sponsor swiper-slide">
                     <div class="sponsor-logo">
-                        <img src="./images/sp5.jpg">
+                        <img src="./images/sponsors_logos/sp5.jpg">
                     </div>
                 </div>
 
                 <div class="sponsor swiper-slide">
                     <div class="sponsor-logo">
-                        <img src="./images/sp6.jpg">
+                        <img src="./images/sponsors_logos/sp6.jpg">
                     </div>
                 </div>
             </div>
