--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>PyMCon Web Series</title>
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/images/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./images/favicon/site.webmanifest">
 
     <!-- Iconscout Icon CDN-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.5/css/unicons.css">
@@ -43,14 +43,14 @@
                 <h4>PyMCon</h4>
             </a>
             <ul class="nav__menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#faqs">FAQs</a></li>
-                <li><a href="#">Schedule</a></li>
-                <li><a href="#">Speakers</a></li>
-                <li><a href="#team">Organizers</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Code of Conduct</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about/">About</a></li>
+                <li><a href="/#faqs">FAQs</a></li>
+                <li><a href="/schedule/">Schedule</a></li>
+                <li><a href="/speakers/">Speakers</a></li>
+                <li><a href="/#team">Organizers</a></li>
+                <li><a href="/contact/">Contact</a></li>
+                <li><a href="/codeofconduct/">Code of Conduct</a></li>
             </ul>
             <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
             <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
